# Bitcoin-by-Blockhain

./: .gitignore  README.md  main.py  pyproject.toml
docs/: Documentacao.md  Padronizacao.md  Padronizacao_Interoperabilidade.md  Peer_Discovery.md
src/: blockchain.py  miner.py  node.py
src/blockchain/: block.py  blockchain.py  miner.py  node.py  protocol.py  transaction.py
