[project]
name = "bitcoin-blockchain"
version = "0.1.0"
description = "Implementação de uma Criptomoeda Distribuída Simplificada (Bitcoin-like)"
authors = [{name = "Igor Paixão"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich",
    "questionary"
]

[project.scripts]
blockchain-node = "src.blockchain:main"
